--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "grunt-contrib-imagemin": "~0.1.4",
     "grunt-contrib-requirejs": "~0.4.1",
     "bower": "~0.10.0",
-    "grunt-bower-requirejs": "~0.5.0"
+    "grunt-bower-requirejs": "~0.5.0",
+    "grunt-usemin": "~0.1.12",
+    "grunt-contrib-htmlmin": "~0.1.3"
   },
   "engines": {
     "node": ">=0.8.0"
